# HeartRate-For-VRChat

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.github/scripts/: check-linux-binary.sh
.github/workflows/: release.yml
.trellis/spec/backend/: quality-guidelines.md
.trellis/tasks/archive/2026-07/07-13-linux-builds-remote-osc/: design.md  implement.md  prd.md  task.json
.trellis/workspace/Boxycat/: index.md  journal-1.md
src/: main.rs
